// Copyright 2022 Namespace Labs Inc; All rights reserved.
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.

syntax = "proto3";

package foundation.schema;

import "schema/package.proto";
import "schema/filecontents.proto";

option go_package = "namespacelabs.dev/foundation/schema";

message Resolvable {
    string                      value                                  = 1; 
    string                      experimental_from_downwards_field_path = 3;  // Kubernetes specific.
    PackageRef                  from_secret_ref                        = 4;
    ServiceRef                  from_service_endpoint                  = 5;  // Inject the endpoint of a service in the stack.
    ServiceRef                  from_service_ingress                   = 6;  // Inject the ingress address of a service. This is available from outside the cluster.
    ResourceConfigFieldSelector from_resource_field                    = 7;
    FieldSelector               from_field_selector                    = 8;
    string                      from_kubernetes_secret                 = 9;  // Kubernetes specific.

    reserved 2;
}

message NamedResolvable {
    string name = 1;
    Resolvable value = 2;
}

message FieldSelector {
    ResolvableSource instance = 1;
    string field_selector = 2;
}

message ResolvableSource {
    PackageRef server = 1; // Resolves into a runtime.Server
    ServiceRef service = 2; // Resolves into a runtime.Server.Service
    string select_internal_endpoint_by_kind = 3; // Resolves into a runtime.Service.InternalEndpoint
    FileContents untyped_json = 4;
}

message ResourceConfigFieldSelector {
    foundation.schema.PackageRef resource       = 1;
    string                       field_selector = 2;
}